--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">Facts Feed</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="failure_text">Something went wrong...Please try later!</string>
     <string name="nointernetconnection_msg">Please check your internet connection.</string>
+    <string name="no_connection_Title">No internet connection!</string>
+    <string name="Ok">Ok</string>
 </resources>
